--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oldman - Full-Stack Developer & AI Enthusiast</title>
-    <meta name="description" content="Portfolio of Oldman - Full-stack developer and AI enthusiast" />
+    <title>
+      Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast
+    </title>
+    <meta
+      name="description"
+      content="Portfolio of Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast"
+    />
     <meta name="author" content="Oldman" />
 
-    <meta property="og:title" content="Oldman - Full-Stack Developer & AI Enthusiast" />
-    <meta property="og:description" content="Portfolio of Oldman - Full-stack developer and AI enthusiast" />
+    <meta
+      property="og:title"
+      content="Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio of Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/profile.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@oldman" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:site" content="@e38383" />
+    <meta name="twitter:image" content="/profile.jpg" />
+
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/us.svg" />
   </head>
 
   <body>
