Fix: Correct author meta tag in index.html
Updated the author meta tag in `index.html` to reflect the correct author name, Uwe Schwarz.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Portfolio of Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast"
     />
-    <meta name="author" content="Oldman" />
+    <meta name="author" content="Uwe Schwarz" />
 
     <meta
       property="og:title"
