Fix: Escape ampersand in meta descriptions and titles
Das Ampersand (&) in den Meta-Beschreibungen und -Titeln wurde escaped, um Darstellungsprobleme zu vermeiden.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast
+      Uwe Schwarz - Project Manager, IT Security Specialist &amp; AI Enthusiast
     </title>
     <meta
       name="description"
-      content="Portfolio of Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast"
+      content="Portfolio of Uwe Schwarz - Project Manager, IT Security Specialist &amp; AI Enthusiast"
     />
     <meta name="author" content="Uwe Schwarz" />
 
     <meta
       property="og:title"
-      content="Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast"
+      content="Uwe Schwarz - Project Manager, IT Security Specialist &amp; AI Enthusiast"
     />
     <meta
       property="og:description"
-      content="Portfolio of Uwe Schwarz - Project Manager, IT Security Specialist & AI Enthusiast"
+      content="Portfolio of Uwe Schwarz - Project Manager, IT Security Specialist &amp; AI Enthusiast"
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/profile.jpg" />
