--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/us.svg" />
+
+    <!-- Umami -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="74cb157f-1973-4ade-a5f9-1202a8604bbb"></script>
   </head>
 
   <body>
